accessing data from other collections

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -7,4 +7,5 @@ html
   body
     block content
   
-    script(src="./public/js/scripts.js")
+    block scripts
+      script(src="/public/js/scripts.js")
