--- a/views/layout.pug
+++ b/views/layout.pug
@@ -2,10 +2,10 @@ doctype html
 html
   head
     title= `My app - ${title}`
-    link(rel="stylesheet", href="../public/css/styles.css")
+    link(rel="stylesheet", href="/css/styles.css", type="text/css")
     meta(name="viewport" content="width=device-width, initial-scale=1")
   body
     block content
   
     block scripts
-      script(src="/public/js/scripts.js")
+      script(src="/js/scripts.js")
