--- a/views/layout.pug
+++ b/views/layout.pug
@@ -5,6 +5,11 @@ html
     link(rel="stylesheet", href="/css/styles.css", type="text/css")
     meta(name="viewport" content="width=device-width, initial-scale=1")
   body
+
+    .nav
+      a(href="http://localhost:7878/") Home
+      a(href="http://localhost:7878/users") Users
+      
     block content
   
     block scripts
