--- a/views/user.pug
+++ b/views/user.pug
@@ -7,7 +7,7 @@ block content
         p.date #{entry.date}
         p.entry #{entry.text}
 
-    form.newEntry(action=`/users/` method="POST")
+    form.newEntry(action=`/user/${user.name}` method="POST")
       label(for="description") New entry
       textarea(name="description", cols="30", rows="10")
       input(type="submit" value="Add entry")
