--- a/views/user.pug
+++ b/views/user.pug
@@ -3,9 +3,10 @@ extends layout
 block content
     h3 #{user.name}
     each entry in user.entries
-      .entryContainer
+      div.entryContainer(id=entry._id) 
         p.date #{entry.date}
         p.entry #{entry.text}
+        button.deleteBtn Delete
 
     form.newEntry(action=`/user/${user.name}` method="POST")
       label(for="description") New entry
