added user registration

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -7,10 +7,14 @@ html
   body
 
     .nav
-      a(href="http://localhost:7878/") Home
-      a(href="http://localhost:7878/users") Users
-      
-    block content
+      .navContainer
+        a(href="http://localhost:7878/") Home
+        a(href="http://localhost:7878/users") Users
+        a(href="http://localhost:7878/register") Register
+        a(href="http://localhost:7878/login") Login      
+        
+    .content
+      block content
   
     block scripts
       script(src="/js/scripts.js")
