--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,13 +1,26 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
   color: rgb(77, 77, 77);
+  padding: 0;
+  margin: 0;
 }
-
+.content {
+  margin: 10px 0 0 10px;
+}
 .date {
   font-size: 0.8rem;
 }
+.nav {
+  height: 60px;
+  background: rgb(77, 77, 77);
+  margin: 0;
+}
+.navContainer {
+  margin-left: 10px;
+}
 .nav a {
   padding-right: 10px;
+  line-height: 60px;
 }
 .entryContainer {
   padding: 10px;
@@ -23,4 +36,17 @@ body {
 }
 .newEntry > input[type='submit'] {
   width: 100px;
+}
+.registerForm {
+  display: flex;
+  flex-direction: column;
+}
+.registerForm .registerInput {
+  width: 60%;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 10px;
+}
+.registerForm button {
+  width: 150px;
 }
