working on user registration

--- a/views/register.pug
+++ b/views/register.pug
@@ -14,7 +14,7 @@ block content
                 label(for="password") Password:
                 input(type="password" name="password" required)
             .registerInput                
-                label(for="passwordConfirm") Confirm password:
+                label(for="confirmPassword") Confirm password:
                 input(type="password" name="confirmPassword" required)
             .registerInput        
                 button(type="submit") Submit
