User registration working

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -9,8 +9,7 @@ html
     .nav
       .navContainer
         a(href="http://localhost:7878/") Home
-        a(href="http://localhost:7878/users") Users
-        a(href="http://localhost:7878/registerForm") Register
+        a(href="http://localhost:7878/register") Register
         a(href="http://localhost:7878/login") Login  
 
     block messages
