--- a/views/layout.pug
+++ b/views/layout.pug
@@ -9,8 +9,11 @@ html
     .nav
       .navContainer
         a(href="http://localhost:7878/") Home
-        a(href="http://localhost:7878/register") Register
-        a(href="http://localhost:7878/login") Login  
+        if user
+          a(href="http://localhost:7878/logout") Logout
+        else
+          a(href="http://localhost:7878/register") Register
+          a(href="http://localhost:7878/login") Login  
 
     block messages
       if locals.flashes
